--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "ros2_ws/src/Xsens_MTi_ROS_Driver_and_Ntrip_Client"]
 	path = ros2_ws/src/Xsens_MTi_ROS_Driver_and_Ntrip_Client
 	url = https://github.com/WilliamZhang2205/Xsens_MTi_ROS_Driver_and_Ntrip_Client.git
+[submodule "ros2_ws/src/Xsens_MTi_Driver"]
+	path = ros2_ws/src/Xsens_MTi_Driver
+	url = https://github.com/WilliamZhang2205/Xsens_MTi_ROS_Driver_and_Ntrip_Client.git
