Fix part 4, adding --extra-index-url for pip to fall back on when nvidias pip fails, testing on workflows

--- a/Docker/jetson/Dockerfile
+++ b/Docker/jetson/Dockerfile
@@ -214,15 +214,13 @@ RUN mkdir -p tmp_cudss && cd tmp_cudss && \
 	rm -rf ${CUSPARSE_SOLVER_NAME} ${CUSPARSE_SOLVER_NAME}.tar.xz
 
 # Install ultralytics, avoid reinstalling numpy and opencv (torch, tensorflow and torchvision installed in the .toml file, cuda supported cause pip index is Jetpack6 one)
-RUN export PIP_INDEX_URL="${PIP_INDEX_FOR_NON_NVIDIA}" && \ 
-    pip install --ignore-install sympy && pip install cython --upgrade && \
-    pip install pillow && pip install pyyaml && pip install requests && \
-    pip install scipy && pip install psutil && pip install polars && pip install ultralytics-thop>=2.0.0
+RUN pip install --extra-index-url {PIP_INDEX_FOR_NON_NVIDIA} --ignore-install sympy \ 
+	cython --upgrade
 
 RUN git clone https://github.com/ultralytics/ultralytics.git && \
     cd ultralytics && \
 	sed -i '/"numpy>=1.23.0"/d; /"opencv-python>=4.6.0"/d; /"numpy<2.0.0"/d' pyproject.toml && \
-	pip install -e . && \
+	pip install --extra-index-url {PIP_INDEX_FOR_NON_NVIDIA} -e . && \
     cd .. && \
 	rm -rf ultralytics
 
