Fix: colcon build on zed wrapper

--- a/Docker/jetson/Dockerfile
+++ b/Docker/jetson/Dockerfile
@@ -197,14 +197,14 @@ RUN git clone --branch ros2 https://github.com/xsenssupport/Xsens_MTi_ROS_Driver
 
 # Build the ZED Wrapper and IMU driver
 WORKDIR /root/ros2_ws
-RUN /bin/bash -c "source /opt/ros/$ROS_DISTRO/install/setup.bash && \
-  source /root/dependencies_ws/install/setup.bash
-  # colcon build --parallel-workers $(nproc) --symlink-install \
-  # --event-handlers console_direct+ --base-paths src \
-  # --cmake-args ' -DCMAKE_BUILD_TYPE=Release' \
-  # ' -DCMAKE_LIBRARY_PATH=/usr/local/cuda/lib64/stubs' \
-  # ' -DCMAKE_CXX_FLAGS="-Wl,--allow-shlib-undefined"' \
-  # ' --no-warn-unused-cli' "
+# RUN /bin/bash -c "source /opt/ros/$ROS_DISTRO/install/setup.bash && \
+#   source /root/dependencies_ws/install/setup.bash && \
+#   colcon build --parallel-workers $(nproc) --symlink-install \
+#   --event-handlers console_direct+ --base-paths src \
+#   --cmake-args ' -DCMAKE_BUILD_TYPE=Release' \
+#   ' -DCMAKE_LIBRARY_PATH=/usr/local/cuda/lib64/stubs' \
+#   ' -DCMAKE_CXX_FLAGS="-Wl,--allow-shlib-undefined"' \
+#   ' --no-warn-unused-cli' "
 
 RUN echo "source /opt/ros/humble/install/setup.bash && source /root/dependencies_ws/install/setup.bash && source /root/ros2_ws/install/setup.bash" >> ~/.bashrc
 RUN echo "tmux" >> ~/.bashrc
