Added include folder in built package, also updated Dockerfile to most recent one so merge also includes newest Docker

--- a/Docker/jetson/Dockerfile
+++ b/Docker/jetson/Dockerfile
@@ -224,6 +224,10 @@ RUN git clone https://github.com/ultralytics/ultralytics.git && \
     cd .. && \
 	rm -rf ultralytics
 
+# Install dependencies for vision
+RUN pip install --extra-index-url ${PIP_INDEX_FOR_NON_NVIDIA} notebook \
+	roboflow albumentations pandas && \
+	pip install --ignore-install --upgrade typing_extensions
 
 # Source env variables
 RUN echo "source /opt/ros/humble/install/setup.bash && source /root/dependencies_ws/install/setup.bash && source /root/AUV-2026/ros2_ws/install/setup.bash" >> ~/.bashrc
