--- a/ros2_ws/src/sensors/CMakeLists.txt
+++ b/ros2_ws/src/sensors/CMakeLists.txt
@@ -35,4 +35,8 @@ install(DIRECTORY
 	 launch
 	DESTINATION share/${PROJECT_NAME})
 
+install(DIRECTORY
+		include
+	DESTINATION include/${PROJECT_NAME})
+
 ament_package()
