--- a/.github/workflows/docker-images-main.yml
+++ b/.github/workflows/docker-images-main.yml
@@ -25,6 +25,9 @@ jobs:
           submodules: recursive    # if you vendor msgs/firmware/etc
           lfs: true
 
+    - name: Set up Docker Buildx for cache usage
+      uses: docker/setup-buildx-action@v3
+
     - name: Login to DockerHub
       if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v3
@@ -58,6 +61,9 @@ jobs:
           submodules: recursive    # if you vendor msgs/firmware/etc
           lfs: true
 
+    - name: Set up Docker Buildx for cache usage
+	- uses: docker/setup-buildx-action@v3
+
     - name: Login to DockerHub
       if: github.ref == 'refs/heads/main'
       uses: docker/login-action@v3
@@ -90,6 +96,9 @@ jobs:
           fetch-tags: true
           submodules: recursive    # if you vendor msgs/firmware/etc
           lfs: true
+
+    - name: Set up Docker buildx
+    - uses: docker/setup-buildx-action@v3
 
     - name: Log in to Docker Hub
       if: github.ref == 'refs/heads/main'
