--- a/Docker/dev/Dockerfile
+++ b/Docker/dev/Dockerfile
@@ -20,6 +20,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     mesa-utils \
     python3 \
     python3-dev \
+    python3-opencv \
     python3-pip \
     python3-setuptools \
     python3-wheel \
