--- a/ros2_ws/src/sensors/CMakeLists.txt
+++ b/ros2_ws/src/sensors/CMakeLists.txt
@@ -3,12 +3,12 @@ project(sensors)
 
 # Default to C++14
 if(NOT CMAKE_CXX_STANDARD)
-	  set(CMAKE_CXX_STANDARD 17)
-  endif()
+	set(CMAKE_CXX_STANDARD 17)
+endif()
 
-  if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-	    add_compile_options(-Wall -Wextra -Wpedantic)
-    endif()
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+	add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
@@ -17,9 +17,7 @@ find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(message_filters REQUIRED)
 
-include_directories(include)
-
-add_executable(imu sensors/movella_republish.cpp)
+add_executable(imu src/movella_republish.cpp)
 ament_target_dependencies(imu 
 	rclcpp 
 	std_msgs 
@@ -27,16 +25,20 @@ ament_target_dependencies(imu
 	sensor_msgs  
 	message_filters)
 
+target_include_directories(imu PUBLIC include/)
+
 install(TARGETS
-	 imu
+	imu
 	DESTINATION lib/${PROJECT_NAME})
 
 install(DIRECTORY
-	 launch
+	launch/
 	DESTINATION share/${PROJECT_NAME})
 
 install(DIRECTORY
-		include
+	include/
 	DESTINATION include/${PROJECT_NAME})
+
+ament_export_include_directories(include)
 
 ament_package()
