Revert "movella IMU into main"

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,10 @@
+[submodule "ros2_ws/src/Xsens_MTi_Driver"]
+	path = ros2_ws/src/Xsens_MTi_Driver
+	url = https://github.com/xsenssupport/Xsens_MTi_ROS_Driver_and_Ntrip_Client.git
+	branch = ros2
 [submodule "ros2_ws/src/zed-ros2-wrapper"]
 	path = ros2_ws/src/zed-ros2-wrapper
 	url = https://github.com/stereolabs/zed-ros2-wrapper.git
-
-[submodule "ros2_ws/src/Xsens_MTi_Driver"]
-	path = ros2_ws/src/Xsens_MTi_Driver
-	url = https://github.com/WilliamZhang2205/Xsens_MTi_ROS_Driver_and_Ntrip_Client.git
 [submodule "ros2_ws/src/ros-tcp-endpoint"]
 	path = ros2_ws/src/ros-tcp-endpoint
 	url = https://github.com/Unity-Technologies/ROS-TCP-Endpoint.git
