--- a/ros2_ws/src/vision/package.xml
+++ b/ros2_ws/src/vision/package.xml
@@ -3,9 +3,12 @@
 <package format="3">
   <name>vision</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="root@todo.todo">root</maintainer>
-  <license>Apache-2.0</license>
+  <description>
+  A package for AUV computer vision tasks, including perception, object detection,
+  and data collection utilities.
+  </description>
+  <maintainer email="lucageuzaine@hotmail.com">root</maintainer>
+  <license>GPL-3.0-or-later</license>
 
   <depend>rclpy</depend>
   <depend>sensor_msgs</depend>
