TMUX patch to prevent terminal from dying on autofill

--- a/Docker/ros1_bridge/Dockerfile.ros2
+++ b/Docker/ros1_bridge/Dockerfile.ros2
@@ -152,4 +152,7 @@ RUN echo "source ros_entrypoint.sh" >> ~/.bashrc \
     && echo "source ros-humble-ros1-bridge/install/setup.bash " >> ~/.bashrc \
     && echo "set +e" >> ~/.bashrc
 
-RUN echo "tmux" >> ~/.bashrc
+RUN echo '[ -z "$TMUX" ] && tmux' >> ~/.bashrc
+
+RUN echo 'set -g default-command "bash -l -i"' >> ~/.tmux.conf \
+    && echo 'set -g default-terminal "screen-256color"' >> ~/.tmux.conf
