--- a/Docker/jetson/Dockerfile
+++ b/Docker/jetson/Dockerfile
@@ -66,6 +66,140 @@ RUN curl -fsSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o
     apt-get update || true && apt-get install -y --no-install-recommends apt-utils dialog && \
     rm -rf /var/lib/apt/lists/*
 
+# Install SSH server and set up SSH access
+# Hardcoding a password is not secure but eh
+RUN apt-get update && apt-get install -y \
+    openssh-server \
+    xauth \
+    && mkdir /var/run/sshd \
+    && mkdir /root/.ssh \
+    && chmod 700 /root/.ssh \
+    && echo "Port 222" >> /etc/ssh/sshd_config \
+    && echo "PermitRootLogin yes" >> /etc/ssh/sshd_config \
+    && echo 'root:jetson' | chpasswd \
+    && rm -rf /var/lib/apt/lists/*
+    
+RUN echo "# R${L4T_MAJOR} (release), REVISION: ${L4T_MINOR}" > /etc/nv_tegra_release && \
+    apt-get update -y || true && apt-get install -y --no-install-recommends \
+    build-essential \
+    cmake \
+    curl \
+    gnupg2 \
+    less \
+    libdraco-dev \
+    libgeographic-dev \
+    libusb-1.0-0-dev \
+    python3 \
+    python3-dev \
+    python3-pip \
+    python3-setuptools \
+    wget \
+    zlib1g-dev \
+    zstd && \
+    export PIP_INDEX_URL="${PIP_INDEX_FOR_NON_NVIDIA}" && \
+    pip install protobuf && \
+    wget -q --no-check-certificate -O ZED_SDK_Linux_JP.run \
+    ${ZED_SDK_URL} && \
+    chmod +x ZED_SDK_Linux_JP.run ; ./ZED_SDK_Linux_JP.run silent skip_python && \
+    rm -rf ZED_SDK_Linux_JP.run && \
+    rm -rf /var/lib/apt/lists/*
+
+# Install other common development tools
+# Keep these in alphabetical
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone && \ 
+    apt-get update && apt-get install -y --no-install-recommends \
+    git \
+    git-lfs \
+    iproute2 \
+    iputils-ping \
+    jq \
+    libpq-dev \
+    lsb-release \
+    nano \
+    python3-colcon-common-extensions \
+    python3-rosdep \
+    python3-vcstools \
+    python3-wheel \
+    sudo \
+    tar \
+    tmux \
+    udev \
+    usbutils \
+    v4l-utils \
+    vim \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
+
+#Install graphics, video, c++ dev libraries
+RUN apt-get update && apt-get install -y --no-install-recommends \
+   g++ \
+   libc++-dev \
+   libavcodec-dev \
+   libavdevice-dev \
+   libavformat-dev \
+   libavutil-dev \
+   libegl1-mesa-dev \
+   libepoxy-dev \
+   libgl1-mesa-dev \
+   libglew-dev \
+   libjpeg-dev \
+   libpng-dev \
+   libswscale-dev \
+   libwayland-dev \
+   libxkbcommon-dev \
+   ninja-build \
+   v4l-utils \
+   && add-apt-repository ppa:deadsnakes/ppa -y \
+   && rm -rf /var/lib/apt/lists/* \
+   && apt-get clean
+
+# copy our configs for zed2i
+COPY SN33688213.conf /usr/local/zed/settings/
+
+# Install missing dependencies and wanted packages from source
+WORKDIR /root/dependencies_ws/src
+RUN wget https://github.com/ros/xacro/archive/refs/tags/${XACRO_VERSION}.tar.gz -O - | tar -xvz && mv xacro-${XACRO_VERSION} xacro && \
+    wget https://github.com/ros/diagnostics/archive/refs/tags/${DIAGNOSTICS_VERSION}.tar.gz -O - | tar -xvz && mv diagnostics-${DIAGNOSTICS_VERSION} diagnostics && \
+    wget https://github.com/ament/ament_lint/archive/refs/tags/${AMENT_LINT_VERSION}.tar.gz -O - | tar -xvz && mv ament_lint-${AMENT_LINT_VERSION} ament-lint && \
+    wget https://github.com/cra-ros-pkg/robot_localization/archive/refs/tags/${ROBOT_LOCALIZATION_VERSION}.tar.gz -O - | tar -xvz && mv robot_localization-${ROBOT_LOCALIZATION_VERSION} robot-localization && \
+    wget https://github.com/stereolabs/zed-ros2-interfaces/archive/refs/tags/${ZED_MSGS_VERSION}.tar.gz -O - | tar -xvz && mv zed-ros2-interfaces-${ZED_MSGS_VERSION} zed-ros2-interfaces && \
+    wget https://github.com/ros-drivers/nmea_msgs/archive/refs/tags/${NMEA_MSGS_VERSION}.tar.gz -O - | tar -xvz && mv nmea_msgs-${NMEA_MSGS_VERSION} nmea_msgs && \
+    wget https://github.com/ros/angles/archive/refs/tags/${ANGLES_VERSION}.tar.gz -O - | tar -xvz && mv angles-${ANGLES_VERSION} angles && \
+    wget https://github.com/ros-perception/point_cloud_transport/archive/refs/tags/${POINTCLOUD_TRANSPORT_VERSION}.tar.gz -O - | tar -xvz && mv point_cloud_transport-${POINTCLOUD_TRANSPORT_VERSION} point_cloud_transport && \
+    wget https://github.com/ros-perception/point_cloud_transport_plugins/archive/refs/tags/${POINTCLOUD_TRANSPORT_PLUGINS_VERSION}.tar.gz -O - | tar -xvz && mv point_cloud_transport_plugins-${POINTCLOUD_TRANSPORT_PLUGINS_VERSION} point_cloud_transport_plugins && \
+    wget https://github.com/ros2/rmw_cyclonedds/archive/refs/tags/${RMW_CYCLONEDDS_VERSION}.tar.gz -O - | tar -xvz && mv rmw_cyclonedds-${RMW_CYCLONEDDS_VERSION} rmw_cyclonedds && \
+    wget https://github.com/ros-geographic-info/geographic_info/archive/refs/tags/${GEOGRAPHIC_INFO_VERSION}.tar.gz -O - | tar -xvz && mv geographic_info-${GEOGRAPHIC_INFO_VERSION} geographic-info && \
+    wget https://github.com/pal-robotics/backward_ros/archive/refs/tags/${BACKWARD_ROS_VERSION}.tar.gz -O - | tar -xvz && mv backward_ros-${BACKWARD_ROS_VERSION} backward_ros && \
+    wget https://github.com/ros-drivers/usb_cam/archive/refs/tags/${USB_CAM_VERSION}.tar.gz -O - | tar -xvz && mv usb_cam-${USB_CAM_VERSION} usb_cam && \
+    wget https://github.com/mavlink/mavros/archive/refs/tags/${MAVROS_VERSION}.tar.gz -O - | tar -xvz && mv mavros-${MAVROS_VERSION} mavros && \
+    wget https://github.com/ros-perception/image_common/archive/refs/tags/${IMAGE_COMMON_VERSION}.tar.gz -O - | tar -xvz && mv image_common-${IMAGE_COMMON_VERSION} image_common && \
+    cp -r geographic-info/geographic_msgs/ . && \
+    cp -r mavros/mavros_msgs/ . && \
+    rm -rf mavros && \
+    rm -rf geographic-info
+
+# ROS packages that do not depend on OpenCV/that ZED wrapper doesn't depend on can be installed here
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    ros-$ROS_DISTRO-foxglove-bridge \
+    ros-$ROS_DISTRO-joy \
+    ros-$ROS_DISTRO-joy-teleop \
+   && rm -rf /var/lib/apt/lists/* \
+   && apt-get clean
+
+# Build the dependencies from source against NVIDIA OpenCV
+# There are 2 workspaces so that all the dependencies installed source
+# do not clutter our ros2_ws
+WORKDIR /root/dependencies_ws
+
+RUN /bin/bash -c "source /opt/ros/$ROS_DISTRO/install/setup.bash && \
+  colcon build --parallel-workers $(nproc) --symlink-install \
+  --event-handlers console_direct+ --base-paths src \
+  --cmake-args ' -DCMAKE_BUILD_TYPE=Release' \
+  ' -DCMAKE_LIBRARY_PATH=/usr/local/cuda/lib64/stubs' \
+  ' -DCMAKE_CXX_FLAGS="-Wl,--allow-shlib-undefined"' \
+  ' --no-warn-unused-cli' "
+
+
 # Re install opencv and cv_bridge so we can have opencv contrib algos for image enhancement, code from https://github.com/AastaNV/JEP/blob/master/script/install_opencv4.10.0_Jetpack6.1.sh
 RUN rm -rf /usr/lib/aarch64-linux-gnu/libopencv* \
            /usr/include/opencv4
@@ -102,7 +236,7 @@ RUN mkdir -p ${OPENCV_FOLDER} && cd ${OPENCV_FOLDER} && \
     rm opencv-${OPENCV_VERSION}.zip opencv_contrib-${OPENCV_VERSION}.zip
 
 # Build and install OpenCV
-RUN mkdir /root/tmp && cd ${OPENCV_FOLDER}/opencv-${OPENCV_VERSION} && \
+RUN mkdir /root/opencv_binary && cd ${OPENCV_FOLDER}/opencv-${OPENCV_VERSION} && \
     mkdir -p release && cd release && \
     cmake -D WITH_CUDA=ON \
           -D WITH_CUDNN=ON \
@@ -117,7 +251,7 @@ RUN mkdir /root/tmp && cd ${OPENCV_FOLDER}/opencv-${OPENCV_VERSION} && \
           -D BUILD_PERF_TESTS=OFF \
           -D BUILD_EXAMPLES=OFF \
           -D CMAKE_BUILD_TYPE=RELEASE \
-          -D CMAKE_INSTALL_PREFIX=/root/tmp .. && \
+          -D CMAKE_INSTALL_PREFIX=/root/opencv_binary .. && \
     make -j$(nproc) && \
     make install && \
     ldconfig
@@ -128,6 +262,39 @@ WORKDIR /root/cv_bridge/src
 RUN git clone -b "humble" https://github.com/ros-perception/vision_opencv.git                  
 WORKDIR /root/cv_bridge/
 RUN colcon build --symlink-install
+
+# Get CUDA dependencies to install torch and torchvision
+WORKDIR /root
+RUN wget https://developer.download.nvidia.com/compute/cusparselt/0.8.1/local_installers/cusparselt-local-tegra-repo-ubuntu2204-0.8.1_0.8.1-1_arm64.deb && \
+    dpkg -i cusparselt-local-tegra-repo-ubuntu2204-0.8.1_0.8.1-1_arm64.deb && \
+    cp /var/cusparselt-local-tegra-repo-ubuntu2204-0.8.1/cusparselt-*-keyring.gpg /usr/share/keyrings/ && \
+    apt-get update && \
+    apt-get -y install cusparselt-cuda-12 && \
+	rm -rf cusparselt-local-tegra-repo-ubuntu2204-0.8.1_0.8.1-1_arm64.deb
+
+ARG CUSPARSE_SOLVER_NAME="libcudss-linux-sbsa-0.6.0.5_cuda12-archive"
+RUN mkdir -p tmp_cudss && cd tmp_cudss && \
+    curl -L -O https://developer.download.nvidia.com/compute/cudss/redist/libcudss/linux-sbsa/${CUSPARSE_SOLVER_NAME}.tar.xz && \
+    tar xf ${CUSPARSE_SOLVER_NAME}.tar.xz && \
+    cp -a ${CUSPARSE_SOLVER_NAME}/include/* /usr/local/cuda/include/ && \
+    cp -a ${CUSPARSE_SOLVER_NAME}/lib/* /usr/local/cuda/lib64/ && \
+	rm -rf ${CUSPARSE_SOLVER_NAME} ${CUSPARSE_SOLVER_NAME}.tar.xz
+
+# Install ultralytics, avoid reinstalling numpy and opencv (torch, tensorflow and torchvision installed in the .toml file, cuda supported cause pip index is Jetpack6 one)
+RUN pip install --extra-index-url ${PIP_INDEX_FOR_NON_NVIDIA} --ignore-install sympy \ 
+	cython --upgrade
+
+RUN git clone https://github.com/ultralytics/ultralytics.git && \
+    cd ultralytics && \
+	sed -i '/"numpy>=1.23.0"/d; /"opencv-python>=4.6.0"/d; /"numpy<2.0.0"/d' pyproject.toml && \
+	pip install --extra-index-url ${PIP_INDEX_FOR_NON_NVIDIA} -e . && \
+    cd .. && \
+	rm -rf ultralytics
+
+# Install dependencies for vision
+RUN pip install --extra-index-url ${PIP_INDEX_FOR_NON_NVIDIA} notebook \
+	roboflow albumentations pandas && \
+	pip install --ignore-install --upgrade typing_extensions
 
 # Source env variables
 RUN echo "source /opt/ros/humble/install/setup.bash && source /root/dependencies_ws/install/setup.bash && source /root/AUV-2026/ros2_ws/install/setup.bash && source /root/cv_bridge/install/setup.bash" >> ~/.bashrc
