Add port 10000 to dev container for Unity Sim testing

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -55,5 +55,6 @@
         }
     ],
 
-    "workspaceFolder": "/root/AUV-2026"
+    "workspaceFolder": "/root/AUV-2026",
+    "forwardPorts": [10000]
 }
