--- a/.github/workflows/docker-images-main.yml
+++ b/.github/workflows/docker-images-main.yml
@@ -42,6 +42,37 @@ jobs:
         push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         tags: mcgillrobotics/auv_2026:dev-amd64
 
+  # build-nvidia-x86:
+  #   runs-on: ubuntu-22.04
+
+  #   permissions:
+  #     contents: read
+  #     packages: write
+
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-tags: true
+  #         submodules: recursive
+  #         lfs: true
+
+  #     - name: Login to DockerHub
+  #       if: github.ref == 'refs/heads/main'
+  #       uses: docker/login-action@v3
+  #       with:
+  #         username: ${{ vars.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+  #     - name: Build and optionally push NVIDIA image
+  #       uses: docker/build-push-action@v6
+  #       with:
+  #         context: Docker/dev
+  #         file: Docker/dev/Dockerfile.nvidia
+  #         platforms: linux/amd64
+  #         push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+  #         tags: mcgillrobotics/auv_2026:dev-nvidia-amd64
+
   build-arm:
     runs-on: ubuntu-22.04-arm
 
