--- a/.github/workflows/docker-images-main.yml
+++ b/.github/workflows/docker-images-main.yml
@@ -5,8 +5,14 @@ on:
     branches: [ "main", "pooltest/*", "dev/*" ]
   pull_request:
     branches: [ "main", "pooltest/*" ]
+    
   workflow_dispatch:
-  # Note: keeps our Dockerhub up to date with latest working images
+    inputs:
+      tag_name:
+        description: 'Docker Tag (e.g., 2026-01 or dev)'
+        required: true
+        default: 'dev'
+
   schedule:
     - cron: '0 0,12 * * *'
 
@@ -27,7 +33,7 @@ jobs:
           lfs: true
 
     - name: Login to DockerHub
-      if: github.ref == 'refs/heads/main'
+      if: github.event_name == 'workflow_dispatch'
       uses: docker/login-action@v3
       with:
         username: ${{ vars.DOCKERHUB_USERNAME }}
@@ -39,8 +45,8 @@ jobs:
         context: Docker/dev
         file: Docker/dev/Dockerfile
         platforms: linux/amd64
-        push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-        tags: mcgillrobotics/auv_2026:dev-amd64
+        push: ${{ github.event_name == 'workflow_dispatch' }}
+        tags: mcgillrobotics/auv_2026:${{ inputs.tag_name }}-amd64
 
   build-arm:
     runs-on: ubuntu-22.04-arm
@@ -54,11 +60,11 @@ jobs:
       uses: actions/checkout@v4
       with:
           fetch-tags: true
-          submodules: recursive    # if you vendor msgs/firmware/etc
+          submodules: recursive
           lfs: true
 
     - name: Login to DockerHub
-      if: github.ref == 'refs/heads/main'
+      if: github.event_name == 'workflow_dispatch'
       uses: docker/login-action@v3
       with:
         username: ${{ vars.DOCKERHUB_USERNAME }}
@@ -70,8 +76,8 @@ jobs:
         context: Docker/dev
         file: Docker/dev/Dockerfile
         platforms: linux/arm64
-        push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-        tags: mcgillrobotics/auv_2026:dev-arm64
+        push: ${{ github.event_name == 'workflow_dispatch' }}
+        tags: mcgillrobotics/auv_2026:${{ inputs.tag_name }}-arm64
 
   build-jetson:
     runs-on: ubuntu-22.04-arm
@@ -85,11 +91,11 @@ jobs:
       uses: actions/checkout@v4
       with:
           fetch-tags: true
-          submodules: recursive    # if you vendor msgs/firmware/etc
+          submodules: recursive
           lfs: true
 
     - name: Log in to Docker Hub
-      if: github.ref == 'refs/heads/main'
+      if: github.event_name == 'workflow_dispatch'
       uses: docker/login-action@v3
       with:
         username: ${{ vars.DOCKERHUB_USERNAME }}
@@ -104,5 +110,5 @@ jobs:
         context: Docker/jetson
         file: Docker/jetson/Dockerfile
         platforms: linux/arm64
-        push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-        tags: mcgillrobotics/auv_2026:jetson
+        push: ${{ github.event_name == 'workflow_dispatch' }}
+        tags: mcgillrobotics/auv_2026:${{ inputs.tag_name }}-jetson
