Complete Zed Detection (to be documented), Add compile options for ZED_SDK, fallback to be added

--- a/ros2_ws/src/vision/CMakeLists.txt
+++ b/ros2_ws/src/vision/CMakeLists.txt
@@ -25,8 +25,6 @@ set(CPP_LIBS
     OpenCV
     eigen3_cmake_module 
     Eigen3
-    ZED
-    CUDA
 )
 
 # find dependencies
@@ -34,14 +32,25 @@ foreach(dep IN LISTS DEPS)
   find_package(${dep} REQUIRED)
 endforeach()
 
+set (SOURCES 
+    vision/object_map/object_tracker.cpp
+    vision/object_map.cpp
+)
+
+find_package(CUDAToolkit QUIET)
+find_package(ZED QUIET)
+
+if(CUDAToolkit_FOUND AND ZED_FOUND)
+    message(STATUS "ZED SDK and CUDA found, building ZED object map node.")
+    target_compile_definitions(object_map PRIVATE HAS_ZED_SDK)
+    target_link_libraries(object_map PRIVATE ZED CUDA)
+    list(APPEND SOURCES vision/object_map/zed_detection.cpp)
+endif()
+
 # C++ object map
-add_executable(object_map 
-  vision/object_map.cpp
-  vision/object_map/object_tracker.cpp
-)
-ament_target_dependencies(object_map 
-    ${CPP_LIBS}
-)
+add_executable(object_map ${SOURCES})
+ament_target_dependencies(object_map ${CPP_LIBS})
+
 target_include_directories(object_map PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>)
